# Kaku

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
assets/macos/Kaku.app/Contents/Resources/: kaku.lua
assets/shell-integration/: kaku.sh  setup_fish.sh  setup_zsh.sh
config/src/: config.rs
crates/kaku-relay/: .gitignore  Cargo.toml  Dockerfile  fly.toml
crates/kaku-relay/src/: main.rs
crates/kaku-remote/: Cargo.toml
crates/kaku-remote/src/: lib.rs
docs/: architecture-v1.md  chat-summary-2026-03-31.md  chat-summary-2026-04-01-m1-progress.md  m2-agent-status-adapter-design.md  requirements-v1.md
kaku/: Cargo.toml
kaku-gui/: Cargo.toml
kaku-gui/src/: inputmap.rs  main.rs
kaku-gui/src/agent_status/: codex_context.rs  events.rs  manager.rs  mod.rs
kaku-gui/src/agent_status/adapters/: claude.rs  codex.rs  mod.rs
kaku-gui/src/overlay/: confirm.rs
kaku-gui/src/termwindow/: agent_status_bridge.rs  clipboard.rs  codex_app_server.rs  keyevent.rs  mod.rs  mouseevent.rs  resize.rs  shortcut_help.rs  sidebar_context_menu.rs  tab_rename.rs
kaku-gui/src/termwindow/render/: mod.rs  paint.rs  sidebar.rs
kaku/src/: m1_workspace.rs  main.rs
kaku/src/config_tui/: mod.rs
mux/src/: termwiztermtab.rs
window/src/: lib.rs
window/src/os/macos/: clipboard.rs
