[package]
name = "kaku-relay"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "kaku-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
