[package]
name = "kaku-remote"
version = "0.8.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
config.workspace = true
fastrand.workspace = true
futures-util.workspace = true
log.workspace = true
qrcode.workspace = true
mux.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite.workspace = true
